--- a/VolleyballScoreSheet/Views/Rotation.xaml
+++ b/VolleyballScoreSheet/Views/Rotation.xaml
@@ -27,7 +27,6 @@
             ShowMinimize="False" />
         <StackPanel Margin="10">
 
-
             <TextBlock Margin="5" FontSize="20">スターティングラインアップを入力してください。</TextBlock>
             <TextBlock Margin="5">リベロ、失格になった選手を含めることはできません。</TextBlock>
             <Grid>
@@ -60,15 +59,120 @@
                     Grid.Row="1"
                     Grid.Column="0"
                     Margin="5"
+                    AutoGenerateColumns="False"
+                    CanUserReorderColumns="False"
+                    CanUserResizeColumns="False"
+                    CanUserSortColumns="False"
+                    IsHitTestVisible="False"
                     IsReadOnly="True"
-                    ItemsSource="{Binding LeftPlayer.Value}" />
+                    ItemsSource="{Binding LeftPlayer}"
+                    RowHeaderWidth="0">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="FontSize" Value="15" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Id}"
+                            CanUserResize="False"
+                            Header="番号">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridTextColumn
+                            Width="2*"
+                            Binding="{Binding Name}"
+                            CanUserResize="False"
+                            Header="名前">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridCheckBoxColumn
+                            Width="1*"
+                            Binding="{Binding IsLibero}"
+                            CanUserResize="False"
+                            Header="リベロ">
+                            <DataGridCheckBoxColumn.ElementStyle>
+                                <Style TargetType="CheckBox">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridCheckBoxColumn.ElementStyle>
+                        </DataGridCheckBoxColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
                 <DataGrid
                     Grid.Row="1"
                     Grid.Column="1"
                     Margin="5"
+                    AutoGenerateColumns="False"
+                    CanUserReorderColumns="False"
+                    CanUserResizeColumns="False"
+                    CanUserSortColumns="False"
+                    IsHitTestVisible="False"
                     IsReadOnly="True"
-                    ItemsSource="{Binding RightPlayer.Value}" />
+                    ItemsSource="{Binding RightPlayer}"
+                    RowHeaderWidth="0">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                            <Setter Property="FontSize" Value="15" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            Width="1*"
+                            Binding="{Binding Id}"
+                            CanUserResize="False"
+                            Header="番号">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
 
+                        <DataGridTextColumn
+                            Width="2*"
+                            Binding="{Binding Name}"
+                            CanUserResize="False"
+                            Header="名前">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
+
+                        <DataGridCheckBoxColumn
+                            Width="1*"
+                            Binding="{Binding IsLibero}"
+                            CanUserResize="False"
+                            Header="リベロ">
+                            <DataGridCheckBoxColumn.ElementStyle>
+                                <Style TargetType="CheckBox">
+                                    <Setter Property="HorizontalAlignment" Value="Center" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </DataGridCheckBoxColumn.ElementStyle>
+                        </DataGridCheckBoxColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
 
                 <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.ColumnDefinitions>
