--- a/VolleyballScoreSheet/Views/Gaming.xaml
+++ b/VolleyballScoreSheet/Views/Gaming.xaml
@@ -763,6 +763,7 @@
                 <Button
                     Margin="5"
                     Padding="10,10"
+                    Command="{Binding ExceptionalSubstitutionCommand}"
                     Content="怪我による選手交代"
                     Style="{StaticResource LightButton}" />
 
