--- a/VolleyballScoreSheet/Views/Gaming.xaml
+++ b/VolleyballScoreSheet/Views/Gaming.xaml
@@ -675,13 +675,13 @@
                     Grid.Column="0"
                     Margin="5"
                     IsReadOnly="True"
-                    ItemsSource="{Binding LeftTeamPlayer.Value}" />
+                    ItemsSource="{Binding LeftTeamPlayer}" />
                 <DataGrid
                     Grid.Row="1"
                     Grid.Column="2"
                     Margin="5"
                     IsReadOnly="True"
-                    ItemsSource="{Binding RightTeamPlayer.Value}" />
+                    ItemsSource="{Binding RightTeamPlayer}" />
 
                 <!--  コート  -->
                 <local:Court
@@ -759,7 +759,6 @@
             </Grid>
 
             <StackPanel Orientation="Horizontal">
-
                 <Button
                     Margin="5"
                     Padding="10,10"
