Converterをapp xaml に移動

--- a/VolleyballScoreSheet/App.xaml
+++ b/VolleyballScoreSheet/App.xaml
@@ -2,6 +2,7 @@
     x:Class="VolleyballScoreSheet.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cv="clr-namespace:VolleyballScoreSheet.Converter"
     xmlns:local="clr-namespace:VolleyballScoreSheet"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
@@ -13,6 +14,9 @@
                 <ui:ControlsDictionary />
 
             </ResourceDictionary.MergedDictionaries>
+
+            <cv:HiddenOrVissible x:Key="HiddenOrVissible" />
+            <cv:BoolToThickness x:Key="BoolToThickness" />
 
             <ControlTemplate x:Key="btnTemplate" TargetType="Button">
                 <Border
