--- a/VolleyballScoreSheet/Views/MatchInfo.xaml
+++ b/VolleyballScoreSheet/Views/MatchInfo.xaml
@@ -108,10 +108,11 @@
                 <ComboBox
                     Grid.Row="1"
                     Grid.Column="3"
-                    Margin="5,0,5,0">
-                    <ComboBoxItem>男</ComboBoxItem>
-                    <ComboBoxItem>女</ComboBoxItem>
-                    <ComboBoxItem>未記入</ComboBoxItem>
+                    Margin="5,0,5,0"
+                    SelectedIndex="{Binding SexSelectValue.Value}">
+                    <ComboBoxItem Content="未選択" />
+                    <ComboBoxItem Content="男子" />
+                    <ComboBoxItem Content="女子" />
                 </ComboBox>
             </Grid>
             <Grid Margin="0,10,0,0">
