審判/ラインジャッジのダイアログを追加

--- a/VolleyballScoreSheet/Views/Gaming.xaml
+++ b/VolleyballScoreSheet/Views/Gaming.xaml
@@ -777,6 +777,13 @@
                     Command="{Binding ScoresheetCommand}"
                     Content="スコアシート"
                     Style="{StaticResource LightButton}" />
+
+                <Button
+                    Margin="5"
+                    Padding="40,10"
+                    Command="{Binding RefereeCommand}"
+                    Content="審判/ラインジャッジ"
+                    Style="{StaticResource LightButton}" />
             </StackPanel>
         </StackPanel>
 
