--- a/VolleyballScoreSheet/Views/ScoreSheet/RefereeAndSignature.xaml
+++ b/VolleyballScoreSheet/Views/ScoreSheet/RefereeAndSignature.xaml
@@ -13,11 +13,14 @@
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Center" />
         </Style>
+        <Style TargetType="Border">
+            <Setter Property="BorderBrush" Value="Black" />
+        </Style>
     </UserControl.Resources>
     <Grid>
-        <Border BorderBrush="Black" BorderThickness="2">
+        <Border BorderThickness="2">
             <Grid>
-                <Border BorderBrush="Black" BorderThickness="0,0,0,1">
+                <Border BorderThickness="0,0,0,1">
                     <TextBlock FontSize="10" Text="審判員とサイン欄" />
                 </Border>
 
@@ -105,30 +108,25 @@
                         Grid.Row="1"
                         Grid.Column="0"
                         Grid.ColumnSpan="4"
-                        BorderBrush="Black"
                         BorderThickness="0,1,0,1" />
                     <Border
                         Grid.Row="3"
                         Grid.Column="0"
                         Grid.ColumnSpan="4"
-                        BorderBrush="Black"
                         BorderThickness="0,1,0,1" />
                     <Border
                         Grid.Row="4"
                         Grid.Column="0"
                         Grid.ColumnSpan="4"
-                        BorderBrush="Black"
                         BorderThickness="0,0,0,1" />
 
                     <Border
                         Grid.RowSpan="5"
                         Grid.Column="1"
-                        BorderBrush="Black"
                         BorderThickness="1,0,1,0" />
                     <Border
                         Grid.RowSpan="5"
                         Grid.Column="2"
-                        BorderBrush="Black"
                         BorderThickness="0,0,1,0" />
 
                     <Grid.ColumnDefinitions>
@@ -144,6 +142,100 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
+                </Grid>
+
+                <Grid Grid.Row="2">
+                    <Viewbox
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="5,0,10,0">
+                        <TextBlock Text="{Binding Referees.FirstLineJudge.Name}" />
+                    </Viewbox>
+                    <Viewbox
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Margin="10,0,5,0">
+                        <TextBlock Text="{Binding Referees.SecondLineJudge.Name}" />
+                    </Viewbox>
+                    <Viewbox
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="5,0,10,0">
+                        <TextBlock Text="{Binding Referees.ThirdLineJudge.Name}" />
+                    </Viewbox>
+                    <Viewbox
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Margin="10,0,5,0">
+                        <TextBlock Text="{Binding Referees.FourthLineJudge.Name}" />
+                    </Viewbox>
+
+
+                    <TextBlock
+                        Grid.RowSpan="2"
+                        Grid.Column="1"
+                        FontSize="9"
+                        Text="ラインジャッジ" />
+                    <TextBlock
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        FontSize="8"
+                        Text="チームキャプテン" />
+                    <TextBlock
+                        Margin="1"
+                        HorizontalAlignment="Right"
+                        Text="1" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Margin="1"
+                        HorizontalAlignment="Right"
+                        Text="3" />
+
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="1"
+                        HorizontalAlignment="Left"
+                        Text="2" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Margin="1"
+                        HorizontalAlignment="Left"
+                        Text="4" />
+
+
+                    <Border BorderThickness="0,0,0,0.5" />
+                    <Border Grid.Column="2" BorderThickness="0,0,0,0.5" />
+                    <Border Grid.Row="1" BorderThickness="0,0.5,0,0.5" />
+                    <Border
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        BorderThickness="0,0.5,0,0.5" />
+                    <Border
+                        Grid.Row="2"
+                        Grid.ColumnSpan="3"
+                        BorderThickness="0,0.5,0,0" />
+                    <Border
+                        Grid.RowSpan="2"
+                        Grid.Column="1"
+                        BorderThickness="1,0,1,0.5" />
+
+                    <Border
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        BorderThickness="1,0,1,0" />
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="53" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
                 </Grid>
 
                 <Grid.RowDefinitions>
